--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
   },
   "scripts": {
     "start": "index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.6.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
