--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^11.10.0"
   }
 }
