--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
+    "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
